<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="64sp"
    android:paddingVertical="32sp"
    android:background="@color/Calypso">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="28sp"
        android:textStyle="bold"
        android:typeface="serif"
        android:textColor="@color/White"
        android:layout_gravity="center" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:textSize="28sp"
        android:textStyle="bold"
        android:typeface="serif"
        android:textColor="@color/White"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CookingSimulator"
        android:textSize="28sp"
        android:textStyle="bold"
        android:typeface="serif"
        android:textColor="@color/White"
        android:layout_gravity="center"/>

    <ImageView
        android:id="@+id/FoodOption2"
        android:layout_width="wrap_content"
        android:layout_height="400sp"
        app:srcCompat="@drawable/salad" />

    <Button
        android:id="@+id/play_button"
        android:layout_width="120sp"
        android:layout_height="60sp"
        android:text="@string/play_button"
        android:layout_gravity="center"
        android:backgroundTint="@color/Light_purple"/>

</LinearLayout>